BIG REFACTOR - Removed sk89 dependency - Removed lombok dependency - Updated from Java 8 to Java 21 - Updated plugin to be compatible with Minecraft 1.21.1 - Implemented auto-save feature (worlds automatically save every 5 minutes) - Modified how command flags are treated; they now work more like Linux command flags. - Modified /worlds command to allow for better world filtering. - Copy-pasted some code from https://github.com/Mew2K/Scaffold/tree/mewmastercoder which includes the following key modifications:  - The /archive command actually works now  - Implemented /world alias to /open command  - Switched /export to use file.io as the file-sharing site.